5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1716_2499.log
== TEST (2019-05-14 17:12:40) 
-- CODE:
x = int(input"X:")
-- ERROR:
File "XXXX", line 1
    x = int(input"X:")
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:21:48) 
-- CODE:
x = int(input("X:"))
from math import *

n = 0 
e = 0
while(n<x):
	e = e+(1/factorial(n))
	n = n+1
print(round(n,8))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:22:09) 
-- CODE:
x = int(input("X:"))
from math import *

n = 0 
e = 0
while(n>x):
	e = e+(1/factorial(n))
	n = n+1
print(round(n,8))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:22:48) 
-- CODE:
x = int(input("X:"))
from math import *

n = 0 
e = 0
while(n<x):
	e = e+(1/factorial(n))
	n = n+1
print(round(n,8))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:23:03) 
-- CODE:
x = int(input("X:"))
from math import *

n = 0 
e = 0
while(n<x):
	e = e+(1/factorial(n))
	n = n+1
print(round(e,8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:23:16) 
-- CODE:
x = int(input("X:"))
from math import *

n = 0 
e = 0
while(n<x):
	e = e+(1/factorial(n))
	n = n+1
print(round(e,8))
-- EXECUTION TIME:
0.183176
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
